--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]
 rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
 rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
 __rustls-tls = ["rustls", "rustls-pki-types"]
+deflate = ["headers"]
 
 [dependencies]
 data-encoding = { version = "2", optional = true }
@@ -65,6 +66,8 @@ optional = true
 version = "0.26"
 
 [dev-dependencies]
+http = "1.0"
+httparse = "1.3.4"
 criterion = "0.6"
 env_logger = "0.11"
 input_buffer = "0.5.0"
