--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]
 rustls-tls-native-roots = ["__rustls-tls", "rustls-native-certs"]
 rustls-tls-webpki-roots = ["__rustls-tls", "webpki-roots"]
 __rustls-tls = ["rustls", "rustls-pki-types"]
-deflate = ["headers"]
+deflate = ["headers", "flate2"]
 
 [dependencies]
 data-encoding = { version = "2", optional = true }
@@ -41,6 +41,16 @@ sha1 = { version = "0.10", optional = true }
 thiserror = "2.0.7"
 url = { version = "2.1.0", optional = true }
 utf-8 = "0.7.5"
+
+[dependencies.flate2]
+optional = true
+version = "1.0.27"
+default-features = false
+# We need some zlib-compatible backend from flate2 to support setting the
+# context window size. Enabling the "zlib" feature is enough, and, per the
+# flate2 documentation, if other crates in the build graph enable the "zlib-ng"
+# or "zlib-ng-compat" features, those will take precedence.
+features = ["zlib"]
 
 [dependencies.native-tls-crate]
 optional = true
