--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ all-features = true
 [features]
 default = ["handshake"]
 handshake = ["data-encoding", "http", "httparse", "sha1"]
+headers = ["http", "dep:headers"]
 url = ["dep:url"]
 native-tls = ["native-tls-crate"]
 native-tls-vendored = ["native-tls", "native-tls-crate/vendored"]
@@ -30,6 +31,7 @@ __rustls-tls = ["rustls", "rustls-pki-types"]
 [dependencies]
 data-encoding = { version = "2", optional = true }
 bytes = "1.9.0"
+headers = { version = "0.4.0", optional = true }
 http = { version = "1.0", optional = true }
 httparse = { version = "1.3.4", optional = true }
 log = "0.4.8"
